Access Request Actions on Mobile & Misc fixes

--- a/public/index.css
+++ b/public/index.css
@@ -23,6 +23,9 @@
 .content {
   display: inline-block;
 }
+.no-padding {
+  padding: 0 !important;
+}
 @media (max-width: 641px) {
   .has-navbar-fixed-top {
     padding-top: 0 !important;
